--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
                 <script src="sketches/frames3.js"></script>
                 <script src="sketches/frames4.js"></script>
                 <script src="sketches/frames5.js"></script>
-                <script src="sketches/frames6.js"></script>
+				<script src="sketches/frames6.js"></script>
                 <script src="sketches/scene-graph.js"></script>
-                <script src="sketches/minimap.js"></script>
+				<script src="sketches/minimap.js"></script>
+				<script src="sketches/scaling2d_id"></script>
+				<script src="sketches/rotation_id"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
